# discord-link-archiver

./: .env-example  link_archive.py  pyproject.toml
